--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^3.0.0",
+    "@types/express": "^5.0.0",
     "express": "^4.21.2",
     "serverless-http": "^3.2.0"
   }
