--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,5 @@
-[functions]
-  external_node_modules = ["express"]
-  node_bundler = "esbuild"
 [[redirects]]
-  force = true
   from = "/api/*"
+  to = "/.netlify/functions/api"
   status = 200
-  to = "/.netlify/functions/api/:splat"
+  force = true
